<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item android:id="@+id/benefit"
        android:title="@string/benefit"
        android:contentDescription="@string/app_name"
        android:icon="@drawable/ic_baseline_diamond_24"/>

    <item android:id="@+id/tossPay"
        android:title="@string/toss_pay"
        android:icon="@drawable/ic_baseline_monetization_on_24"/>

    <item android:id="@+id/stock"
        android:title="@string/invest_"
        android:icon="@drawable/ic_baseline_show_chart_24"/>

    <item android:id="@+id/all"
        android:title="@string/all"
        android:icon="@drawable/ic_baseline_view_headline_24"/>

</menu>